--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,8 @@
 import '../styles/global.css'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+const {pageTitle} =Astro.props
+
 ---
 
 <html lang="en">
@@ -10,18 +12,11 @@ import Footer from '../components/Footer.astro'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <Header />
-		<h1>Blog</h1>
-		<ul>
-			<li><a href="/posts/post-1">post1</a></li>
-			<li><a href="/posts/post-2">post2</a></li>
-			<li><a href="/posts/post-3">post3</a></li>
-			<li><a href="/posts/post-4">post4</a></li>
-		</ul>
-		
+		<Header />
+		<slot />
 		<Footer />
 		<script>
 			import "../scripts/menu.js"
