--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,21 @@
 ---
+import '../styles/global.css'
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro'
 
+const pageTitle = "About";
+
+const imformation = {
+  name: "Motues",
+  age: 18,
+  country: "China",
+  hobby: "Coding",
+};
+
+const skills = ["JavaScript", "TypeScript", "HTML", "CSS", "Svelte", "Astro"];
+
+const skillColor = "pink";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -8,13 +24,36 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>About</title>
+		<title>{pageTitle}</title>
+		<style define:vars={{skillColor, textCase}}>
+			h1 {
+			  color: purple;
+			  font-size: 4rem;
+			}
+			.skill {
+				color: var(--skillColor);
+				font-weight: bold;
+				text-transform: var(--textCase);
+			}
+		  </style>
 	</head>
 	<body>
-        <a href="/">Home</a>
-		<a href="/about">About</a>
-		<a href="/blog">Blog</a>
-		<h1>About Motues！</h1>
-        <p>huster</p>
+       <Header />
+		<h1>{pageTitle}</h1>
+        <p>Here are some imformations of me!</p>
+		<ul>
+			<li>Name: {imformation.name}</li>
+			<li>Age: {imformation.age}</li>
+			<li>Country: {imformation.country}</li>
+			<li>Hobby: {imformation.hobby}</li>
+		</ul>
+		<p>My skills:</p>
+		<ul>
+			{skills.map((skill) => <li class="skill">{skill}</li>)}
+		</ul>
+		<Footer />
+		<script>
+			import "../scripts/menu.js"
+		</script>
 	</body>
 </html>
